# coconut2

./: .gitignore  Cargo.toml  README.md  TODO.md  chatter-protocol.md
doc/: apps.rst  conf.py  index.rst  introduction.rst  overview.rst  pedersen.rst  service.rst  transaction.rst  unblind.rst  zkproof.rst
examples/: anontx.sh  client.rs  df.rs  node.rs  simple.rs
scripts/: bootstrap.rc
src/: aes.rs  async_serial.rs  bls_extensions.rs  chatter.rs  elgamal.rs  error.rs  lib.rs  net.rs  pedersen.rs  protocol.rs  runtime.rs  serial.rs  slab.rs  stealth.rs  stealth_address.rs  utility.rs
src/coconut/: coconut.rs  mod.rs  tests.rs
src/proofs/: credential_proof.rs  mod.rs  ownership_proof.rs  pedersen_proof.rs  proof.rs  rangeproof.rs  signature_proof.rs  simple_or.rs  tests.rs
src/schema/: input.rs  mod.rs  output.rs  service.rs  tests.rs  token.rs  transaction.rs
