[package]
name = "darkwallet"
version = "0.0.5"
authors = ["Amir Taaki <amir@dyne.org>"]
license = "GPL-3.0-or-later"
description = "dark transactions with multiple attributes and custom schnorr proofs"
edition = "2018"
repository = "https://github.com/narodnik/darkwallet"
exclude = [
    "extern/*"
]

[[bin]]
name = "adamd"
path = "src/bin/adamd/adamd.rs"

[[bin]]
name = "titand"
path = "src/bin/titand/titand.rs"

[[bin]]
name = "mintd"
path = "src/bin/mintd/mintd.rs"

[dependencies]
itertools = "0.8.2"
rand_core = "0.5.1"
rand = "0.7.2"
sha2 = "0.8.1"
bls12_381 = { version = "0.1.1" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
hex = "0.4.2"
# used for darkd
log = "0.4"
smol = "0.1.18"
num_cpus = "1.0"
async-channel = "1.1.1"
async-dup = "1.1.0"
futures = "0.3.5"
num_enum = "0.5.0"
simplelog = "0.7.4"
async-std = "1.6.2"
aes-gcm = "0.6.0"
bs58 = "0.3.1"

[dev-dependencies]
#clap = "2.33.0"
clap = "3.0.0-beta.1"
dirs = "2.0.2"
failure = "0.1.8"
failure_derive = "0.1.8"
toml = "0.5.6"
serde_derive = "1.0.111"
